--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang=en><head></head><body>Hello</body></html>
+<!DOCTYPE html><html lang=en><head></head><body>Hello 2</body></html>
